welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:8: error: ')' expected but 'while' found.
while(croisement()&&(nbBuggles<3){
^Poucet:13: error: ')' expected but '}' found.
	}
        ^