welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nbBuggles= 0
while(!croisement()&&(!sortieTrouvee()){
	if (estSurBuggle()){
	nbBuggles=nbBuggles+1 }
	avance();
}
while(croisement()&&(nbBuggles<3){
	droite();
}
